# waveflux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
packaging/aur/: PKGBUILD  waveflux.desktop
packaging/debian/: waveflux.desktop
packaging/rpm/: waveflux.spec.in
packaging/wix/: LICENSE.rtf  Product.wxs  Theme.wxl
qml/: AudioConverterDialog.qml  BatchAudioConverterDialog.qml  BulkTagEditorDialog.qml  CompactSkin.qml  EqualizerDialog.qml  IconResolver.js  Main.qml  OpenUrlDialog.qml  PlayerControls.qml  PlaylistView.qml  SettingsDialog.qml  SmartCollectionDialog.qml  TagEditorDialog.qml  UpdateAvailableDialog.qml  WaveformView.qml  YtDlpImportDialog.qml
qml/components/: AboutDialog.qml  AccentCheckBox.qml  AccentColorDialog.qml  AccentComboBox.qml  AccentMenu.qml  AccentMenuItem.qml  AccentMenuSeparator.qml  AccentProgressBar.qml  AccentRadioButton.qml  AccentSlider.qml  AccentSwitch.qml  Button.qml  CollectionsSidebar.qml  ControlBar.qml  HeaderBar.qml  InfoSidebar.qml  KeyboardShortcutsDialog.qml  PlaybackAdjustStrip.qml  PlaylistTable.qml  SelectableMessageDialog.qml  SettingComboRow.qml  SettingHintText.qml  SettingSliderRow.qml  SettingToggleRow.qml  SettingsSearchResults.qml  SettingsSectionPage.qml  SettingsTabBar.qml  SettingsTabButton.qml  TrackInfoOverlay.qml  VolumeStrip.qml  WaveformHoverTooltip.qml
resources/: waveflux.rc
scripts/: build-appimage.sh  build-debian-package.sh  build-pacman-package.sh  build-portable-zip.ps1  build-rpm-package.sh  build-win-runtime.ps1  build-wix-installer.ps1  check-memory-budgets.ps1  deploy-windows-runtime.ps1
src/: AppSettingsManager.cpp  AppSettingsManager.h  AudioConverterService.cpp  AudioConverterService.h  AudioEngine.cpp  AudioEngine.h  BatchAudioConverterPresetManager.cpp  BatchAudioConverterPresetManager.h  BatchAudioConverterService.cpp  BatchAudioConverterService.h  CueSheetParser.cpp  CueSheetParser.h  DiagnosticsFlags.h  EqualizerPresetManager.cpp  EqualizerPresetManager.h  GlobalKeyMonitor.cpp  GlobalKeyMonitor.h  MprisService.cpp  MprisService.h  MprisService_stub.cpp  PeaksCacheManager.cpp  PeaksCacheManager.h  PerformanceProfiler.cpp  PerformanceProfiler.h  PlaybackController.cpp  PlaybackController.h  PlaylistExportService.cpp  PlaylistExportService.h  PlaylistProfilesManager.cpp  PlaylistProfilesManager.h  SessionManager.cpp  SessionManager.h  ShortcutManager.cpp  ShortcutManager.h  ShortcutRegistry.cpp  ShortcutRegistry.h  TagEditor.cpp  TagEditor.h  TagLibPath.h  ThemeManager.cpp  (+23 more)
src/playback/: IPlaybackBackend.h  OpenMptPlaybackBackend.cpp  OpenMptPlaybackBackend.h  OpenMptWaveformRenderer.cpp  OpenMptWaveformRenderer.h  PlaybackBackendRouting.cpp  PlaybackBackendRouting.h  RemoteTrackerSourceCache.cpp  RemoteTrackerSourceCache.h  TrackerPcmEngine.cpp  TrackerPcmEngine.h
tests/: CMakeLists.txt  tracker_dsp_bench.cpp  tst_AppSettingsManager.cpp  tst_AudioConverterService.cpp  tst_BatchAudioConverterPresetManager.cpp  tst_BatchAudioConverterService.cpp  tst_CueSheetParser.cpp  tst_EqualizerPresetManager.cpp  tst_OpenMptPlaybackBackend.cpp  tst_OpenMptWaveformRenderer.cpp  tst_PlaybackBackendContract.cpp  tst_PlaybackBackendRouting.cpp  tst_PlaybackControllerScenarios.cpp  tst_PlaybackControllerTransitions.cpp  tst_PlaylistProfilesManager.cpp  tst_RemoteTrackerSourceCache.cpp  tst_ShortcutManager.cpp  tst_TrackInfoFormatter.cpp  tst_TrackModel.cpp  tst_UpdateChecker.cpp  tst_WaveformProvider.cpp  tst_XspfPlaylistParser.cpp  tst_YtDlpImportDialogSmoke.cpp  tst_YtDlpImportService.cpp
tests/testdata/tracker/: generate_tracker_fixtures.py  manifest.json  stress-long-loopish.mod  stress-rapid-seek.mod  stress-short-silent.mod  tiny.669  tiny.it  tiny.mod  tiny.s3m  tiny.xm
tests/testdata/tracker/realmods/: a_blue_shade_of_haze.it  a_bunch_o_loops.s3m  acid_funk.669  aqua-phobia_main.amf  arcanoid.stm
tests/testdata/yt_dlp/: flat_playlist.json  partially_unavailable_playlist.json  single_video.json  youtube_playlist.json
